sligh spacing fix social

--- a/Unit07/css/styles.css
+++ b/Unit07/css/styles.css
@@ -996,4 +996,4 @@ footer {
     margin: 0 !important; }
 
   div.social {
-    margin: 0 27rem; } }
+    margin: 0 24rem; } }
