--- a/Unit07/scss/_large.scss
+++ b/Unit07/scss/_large.scss
@@ -123,5 +123,5 @@ h2 {
 }
 
 div.social {
-    margin: 0 27rem;
+    margin: 0 24rem;
 }
